--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,11 +1,127 @@
-$bg-color: #BA265D;
-$color: #FFF;
+// $bg-color: #BA265D;
+// $color: #FFF;
 
-body {
-    background: $bg-color;
-    color: $color;
-}
+// body {
+//     background: $bg-color;
+//     color: $color;
+// }
 
-h1{
-    font-size: 40px;
-}
+// h1{
+//     font-size: 40px;
+// }
+
+// SETTINGS
+/* ========================================================================================= */
+/* SETTINGS */
+/* ========================================================================================= */
+@import "settings/_settings";
+/* ========================================================================================= */
+/* END SETTINGS */
+/* ========================================================================================= */
+
+
+
+// TOOLS - (FUNCS - MIXINS)
+/* ========================================================================================= */
+/* TOOLS */
+/* ========================================================================================= */
+@import "tools/_functions";
+@import "tools/_mixins";
+/* ========================================================================================= */
+/* END TOOLS */
+/* ========================================================================================= */
+
+
+
+// GENERIC
+/* ========================================================================================= */
+/* GENERIC */
+/* ========================================================================================= */
+@import 'generic/_generic';
+/* ========================================================================================= */
+/* END GENERIC */
+/* ========================================================================================= */
+
+
+
+// TAGS
+/* ========================================================================================= */
+/* TAGS */
+/* ========================================================================================= */
+@import 'tags/_tags';
+/* ========================================================================================= */
+/* END TAGS */
+/* ========================================================================================= */
+
+
+
+// KEYFRAMES
+/* ========================================================================================= */
+/* KEYFRAMES */
+/* ========================================================================================= */
+@import "keyframes/_keyframes";
+/* ========================================================================================= */
+/* END KEYFRAMES */
+/* ========================================================================================= */
+
+
+
+// OBJECTS
+/* ========================================================================================= */
+/* OBJECTS */
+/* ========================================================================================= */
+@import "objects/_o-col";
+@import "objects/_o-container";
+@import "objects/_o-font";
+/* ========================================================================================= */
+/* END OBJECTS */
+/* ========================================================================================= */
+
+
+
+// COMPONENTS
+/* ========================================================================================= */
+/* COMPONENTS */
+/* ========================================================================================= */
+@import "components/_c-col-content-col-image";
+@import "components/_c-footer";
+@import "components/_c-header";
+@import "components/_c-image";
+@import "components/_c-menu-dropdown";
+@import "components/_c-title-and-content";
+/* ========================================================================================= */
+/* END COMPONENTS */
+/* ========================================================================================= */
+
+
+
+// SCOPES
+/* ========================================================================================= */
+/* SCOPES */
+/* ========================================================================================= */
+@import "scopes/_scopes";
+/* ========================================================================================= */
+/* END SCOPES */
+/* ========================================================================================= */
+
+
+
+// EXTERNAL
+/* ========================================================================================= */
+/* EXTERNAL */
+/* ========================================================================================= */
+@import "external/_external";
+/* ========================================================================================= */
+/* END EXTERNAL */
+/* ========================================================================================= */
+
+
+
+// UTILITIES
+/* ========================================================================================= */
+/* UTILITIES */
+/* ========================================================================================= */
+@import 'utilities/_utilities';
+/* ========================================================================================= */
+/* END UTILITIES */
+/* ========================================================================================= */
